--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "js-crc": "^0.2.0",
+    "progress": "^2.0.0",
+    "single-line-log": "^1.1.2",
     "yargs": "^10.0.3"
   }
 }
